[gd_scene load_steps=4 format=2]

[ext_resource path="res://Dice/PlayerDie.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main/Main.gd" type="Script" id=3]

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="PlayerDie" parent="." instance=ExtResource( 1 )]

[node name="Walls" type="Spatial" parent="."]

[node name="StaticBody" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 34, 5, 0 )

[node name="StaticBody2" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -34, 5, 0 )

[node name="StaticBody3" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 17, 5, -30 )

[node name="StaticBody4" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -17, 5, 30 )

[node name="StaticBody5" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 17, 5, 30 )

[node name="StaticBody6" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, -17, 5, -30 )

[node name="Spawns" type="Spatial" parent="."]

[node name="Position3D" type="Position3D" parent="Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0 )

[node name="Position3D2" type="Position3D" parent="Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 0 )

[node name="Position3D3" type="Position3D" parent="Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 27 )

[node name="Position3D4" type="Position3D" parent="Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -27 )

[node name="Position3D5" type="Position3D" parent="Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 27 )

[node name="Position3D6" type="Position3D" parent="Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -27 )

[node name="EnemyContainer" type="Spatial" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
